@@ -1,3 +1,12 @@
+2007-01-25 Harald Fernengel <harald@trolltech.com>
+
+        Reviewed by zack
+
+        Compile on platforms where qreal is not a double.
+
+        * platform/graphics/qt/AffineTransformQt.cpp:
+        (WebCore::AffineTransform::map):
+
 2007-01-25  Zack Rusin  <zack@kde.org>
 
         Reviewed by Lars.
